[metadata]
name = pynindo
description = The Python API for Nindo.de
url = https://github.com/axju/pynindo
author = axju
author_email = axel.juraske@short-report.de
license = MIT
long_description = file: README.rst
long_description_content_type = text/plain
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[tox:tox]
envlist =
    py{35,36,37,38}, flake8, pylint, cov-report
skipt_missing_interpreters = True

[testenv]
setenv = COVERAGE_FILE = .coverage.{envname}
deps = coverage
commands =
    coverage run --source=pynindo -m unittest discover

[testenv:flake8]
deps = flake8
commands = flake8 pynindo

[testenv:pylint]
deps = pylint
commands = pylint --rcfile=setup.cfg pynindo

[testenv:cov-report]
skipsdist = True
setenv = COVERAGE_FILE = .coverage
deps = coverage
commands =
    coverage combine
    coverage report --fail-under=50

[flake8]
ignore = E722
max-line-length = 160

[pylint]
disable = missing-docstring, bare-except
max-line-length = 160
